--- a/Minimal-CV.tex
+++ b/Minimal-CV.tex
@@ -63,8 +63,7 @@
 \newcommand{\mainboxwidth}{.65}
 
 % Vertical spacing of the boxes (must sum up to 1)
-\newcommand{\headboxheight}{.080}
-\newcommand{\mainboxheight}{.910}
+\newcommand{\mainboxheight}{.990}
 \newcommand{\footboxheight}{.010}
 
 %   sideboxwidth           mainboxwidth
@@ -109,8 +108,8 @@
 
 % Custom font commands
 \newcommand{\header}[3]{\uppercase{\textbf{\fontsize{30}{100}{\lsstyle{#1 \hspace{3pt} #2 \hspace{3pt} #3}}}}}
-\newcommand{\titlefont}[1]{\uppercase{\textbf{\Large{#1}}}}
-
+\newcommand{\titlefont}[1]{\uppercase{\textbf{\large{#1}}}}
+\newcommand{\namefont}[1]{\uppercase{\textbf{\Large{#1}}}}
 
 % -- Additional packages
 
@@ -127,6 +126,9 @@
 \usepackage{hyperref}
 \urlstyle{same}
 
+% FontAwesome icons
+\usepackage{fontawesome5}
+
 
 \begin{document}
 
@@ -134,31 +136,6 @@
     poster = {columns=1, rows=1, spacing=0pt},
     boxes = {sharp corners, halign=center, valign=center, boxrule=0pt}
 ]
-
-
-% -- Headbox
-
-\posterbox[
-    colback=minimal-main,
-    halign=center]
-    {name=headbox,
-    span=1,
-    rowspan=\headboxheight}
-{
-
-    \color{white}
-
-    \header{Carl}{F.}{Gauss}
-
-    \vspace{-7px}
-    \begin{tikzpicture}
-        \draw[fill=white] (-5.0, -0.01) rectangle (5.0, 0.01);
-    \end{tikzpicture}
-    \vspace{5px}
-
-    \titlefont{The foremost of mathematicians}
-}
-
 
 % -- Sidebox
 
@@ -169,7 +146,6 @@
     halign=right,
     right=\inboxspacing]
     {name=sidebar,
-    below=headbox,
     column=1,
     span=\sideboxwidth,
     rowspan=\mainboxheight}
@@ -181,50 +157,52 @@
         % \multicolumn{2}{@{}c@{}}{\includegraphics[scale=0.25]{images/image.jpg}} \\
         \mediumspace
 
+        \multicolumn{2}{@{} c @{}}{\namefont{Carl F. Gauss}} \\ 
+        \mediumspace
+
         & \titlefont{Contact} \\
         \hline \mediumspace
 
-        \multirow{4}{*}{\scalebox{0.075}{\input{icons/address.tex}}}
+        \multirow{4}{*}{\scalebox{2.5}{\faHome}}
             & \textbf{Address} \\
                 & Göttingen \\
                 & Kingdom of Hanover \\
                 & \smallspace
 
-        \multirow{2}{*}{\scalebox{0.075}{\input{icons/phone.tex}}}
+        \multirow{2}{*}{\scalebox{2.5}{\faPhone}}
             & \textbf{Phone} \\
                 & \href{tel:+4901234567891}{+49 012 3456-7891} \\
                 & \smallspace
 
-        \multirow{2}{*}{\scalebox{0.075}{\input{icons/email.tex}}}
+        \multirow{2}{*}{\scalebox{2.5}{\faEnvelope}}
             & \textbf{E-Mail} \\
                 & \href{mailto:carl.gauss@uni-goe.de}{carl.gauss@uni-goe.de} \\
-                & \largespace
-
-        & \titlefont{Personal} \\
-        \hline \mediumspace
-
-        \multirow{2}{*}{\scalebox{0.075}{\input{icons/birthday.tex}}}
-            & \textbf{Date of Birth} \\
-                & 30/04/1777 \\
-                & \smallspace
-
-        \multirow{2}{*}{\scalebox{0.075}{\input{icons/nationality.tex}}}
-            & \textbf{Nationality} \\
-                & Holy Roman Empire \\
                 & \largespace
 
         & \titlefont{Platforms} \\
         \hline \mediumspace
 
-        \multirow{2}{*}{\scalebox{0.075}{\input{icons/github.tex}}}
+        \multirow{2}{*}{\scalebox{2.5}{\faGithub}}
             & \textbf{GitHub} \\
                 & \href{https://youtu.be/dQw4w9WgXcQ}{CFGauss} \\
                 & \smallspace
 
-        \multirow{2}{*}{\scalebox{0.075}{\input{icons/linkedin.tex}}}
+        \multirow{2}{*}{\scalebox{2.5}{\faLinkedin}}
             & \textbf{LinkedIn} \\
                 & \href{https://youtu.be/dQw4w9WgXcQ}{Carl Friedrich Gauss} \\
                 & \largespace
+
+        & \titlefont{Skills} \\
+        \hline \mediumspace
+
+        \multirow{2}{*}{\scalebox{2.5}{\faCog}}
+        & \raisebox{-0.75em}{\textbf{Math problem solving}} \\
+            & \largespace 
+
+        \multirow{2}{*}{\scalebox{2.5}{\faSearch}}
+        & \raisebox{-0.75em}{\textbf{Autonomy in research}} \\
+                & \largespace
+                & \smallspace
 
         & \titlefont{Languages} \\
         \hline \mediumspace
@@ -241,7 +219,8 @@
 
         \multirow{2}{*}{\scalebox{0.075}{\input{flags/france.tex}}}
             & \textbf{French} \\
-                & Fluent
+                & Fluent \\
+                & \largespace
 
     \end{tabular}
 }
@@ -258,13 +237,12 @@
     {name=mainbox,
     column*=1,
     span=\mainboxwidth,
-    below=headbox,
     rowspan=\mainboxheight}
 {
 
     \begin{tabular}{>{\footnotesize}rl}
 
-        & \titlefont{Education} \\
+        & \titlefont{\faGraduationCap\enspace Education} \\
         \hline \mediumspace
 
         02/1798 - 09/1799
@@ -286,7 +264,7 @@
             & Stipend from the duke of Brunswick \\
             & \largespace
 
-        & \titlefont{Work Expericence} \\
+        & \titlefont{\faChartPie\enspace Work experience} \\
         \hline \mediumspace
 
         Since 02/1807
@@ -302,7 +280,7 @@
             & Invented heliotrope to simplify measurements \\ 
             & \largespace
 
-        & \titlefont{Selected Publications} \\
+        & \titlefont{\faFlask\enspace Projects} \\
         \hline \mediumspace
         1832
             & \textbf{The Intensity of the Earth's Magnetic Force} \\
@@ -314,32 +292,7 @@
             & \textbf{Arithmetical Investigations} \\
             & \largespace
 
-        & \titlefont{Awards} \\
-        \hline \mediumspace
-
-        1838
-            & \textbf{Copley Medal} \\
-        1809
-            & \textbf{Lalande Prize} \\
-            & \largespace
-
-        & \titlefont{Memberships} \\
-            \hline \mediumspace
-            1853
-                & \textbf{American Philosophical Society} \\
-                & Elected member \\
-            1845
-                & \textbf{Royal Institute of the Netherlands} \\
-                & Associated member \\
-            1822
-                & \textbf{American Academy of Arts and Sciences} \\
-                & Foreign honorary member \\
-            1821
-                & \textbf{Royal Swedish Academy of Sciences} \\
-                & Foreign member \\
-                & \largespace
-
-        & \titlefont{Hobbies} \\
+        & \titlefont{\faPaperPlane\enspace Hobbies} \\
         \hline \mediumspace
             & Astronomical observations and measurements \\
             & Investigation of prime number distribution \\
