--- a/Minimal-CV.tex
+++ b/Minimal-CV.tex
@@ -123,6 +123,9 @@
 % FontAwesome icons
 \usepackage{fontawesome5}
 
+% Svg 
+\usepackage{svg} 
+
 % Greek alphabet
 \usepackage{textgreek}
 \usepackage[main=english, greek]{babel}  
